Página de inicio

--- a/index.html
+++ b/index.html
@@ -4,9 +4,36 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Página bien estructurada</title>
 </head>
 <body>
-    <h1>TITULO</h1>
+    <header>
+        <p>El <b>"header"</b> es un menú donde el usuario tiene todas las opciones
+            para navegar por la página. Siempre va de la mano con la barra de
+            navegación "nav".</p>
+        <nav>
+            <p>El <b>"nav"</b> lo que hace es, mandarnos a distintas partes
+                de la página, ejemplo, sección de mi cuenta, privacidad, etc.
+                Todos esos enlaces van a estar en el "nav".</p>
+            <ul>
+                <li><a href="index.html"></a>Inicio</li>
+                <li><a href="https://www.instagram.com/lautysartor/" target="_BLANK">Contacto</a></li>
+                <li><a href="sobrenosotros.html">Sobre nosotros</a></li>
+            </ul>
+        </nav>
+    </header>
+    <article>
+        <p>El <b>"article"</b> es toda la página entera</p>
+        <section>
+            <p>Pero a su vez, puede dividirse en varios <b>"section"</b>.</p>
+        </section>
+    </article>
+    <aside>
+        <p>El <b>"aside"</b> es la barra de navegación lateral de la página,
+            acá se ponen cosas irrelevantes.</p>
+    </aside>
+    <footer>
+        <p>En el <b>"footer"</b> va el copyright, contacto, etc.</p>
+    </footer>
 </body>
 </html>
